Cleaning Branch | Python can execute JS code

--- a/ui/menu.html
+++ b/ui/menu.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Menu</title>
+  <script type="text/javascript" src="jquery.js"></script>
   <style>
     body {background-color: #2a2a32}
   </style>
